@@ -1,3 +1,6 @@
+2008-01-17 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/plugins/WriteCD.py: check if gnome is the desktop, #1599
+
 2008-01-17  Raphael Ackermann <raphael.ackermann@gmail.com>
     * src/ArgHandler.py: 0001588: -a summary does nothing
 
